# course_OOP_core_E-commerce

./: .gitignore  README.md  pyproject.toml
commerce_cours_oop/: load_data_from_json.py  oop_store.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_934105182f6810a8___init___py.html  z_934105182f6810a8_load_data_from_json_py.html  z_934105182f6810a8_main_py.html  z_934105182f6810a8_oop_store_py.html
tests/: test_oop_store.py
