[tool.poetry]
name = "course-oop-core-e-commerce"
version = "0.1.0"
description = "core for the online store"
authors = ["Artur Koltyrin <koltyrinartur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
